# cpp-image-converter

ImgConverter/: CMakeLists.txt  main.cpp
ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp  ppm_image.cpp  ppm_image.h
